# context-launcher

./: .gitignore  CMakeLists.txt  CONFIG-EDITOR-BUILD.md  ConfigEditor.cs  INSTALLER-GUIDE.md  LICENSE  LICENSE.txt  QUICKSTART.md  README.md  build-all.bat  build-config-editor.bat  build.bat  installer-script.iss  launcher.cpp  launcher.ini
